additional styling fixes for header and changed project grid to 2 columns on tablet and above

--- a/css/base/base.css
+++ b/css/base/base.css
@@ -28,6 +28,14 @@ ul li {
   border-radius: 0.5rem;
 }
 
+/* Tablet Media Query */
+
+@media screen and (min-width: 48rem) {
+  .projects-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 .link:link,
 .link:visited {
   color: var(--black);
