--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -4,9 +4,9 @@ header {
   padding: 2rem 1.5rem;
 }
 
-/* Desktop Media Query */
+/* Tablet Media Query */
 
-@media screen and (min-width: 62rem) {
+@media screen and (min-width: 48rem) {
   header div {
     display: flex;
     align-items: center;
@@ -24,18 +24,9 @@ nav ul {
   align-items: center;
   justify-content: space-around;
 }
-
 /* Tablet Media Query */
 
 @media screen and (min-width: 48rem) {
-  nav ul {
-    justify-content: center;
-  }
-}
-
-/* Desktop Media Query */
-
-@media screen and (min-width: 62rem) {
   nav ul {
     justify-content: flex-end;
   }
@@ -47,9 +38,9 @@ nav ul li {
   font-size: 1rem;
 }
 
-/* Desktop Media Query */
+/* Tablet Media Query */
 
-@media screen and (min-width: 62rem) {
+@media screen and (min-width: 48rem) {
   nav ul li {
     margin: 0 1.25rem 0 0;
   }
